Fix text-align

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -26,9 +26,7 @@ $trackit: #8F2D56
 @import 'proposals'
 
 .jumbotron
-  text-align: center
   margin-top: 50px
-  text-align: center
   margin-top: 20px
 
 .nav
